[package]
name = "rust-secret-manager"
version = "0.1.0"
authors = ["Ben Edridge <BenEdridge@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "sqlite", "runtime-tokio", "macros" ] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }